@@ -1,6 +1,7 @@
 vNEXT (in development)
 
  * Added support for SCRAM-SHA-1 and SCRAM-SHA-256 SASL mechanisms
+ * Added MotdLineReceived event
 
 v0.7.0
 
